--- a/index.html
+++ b/index.html
@@ -1,27 +1,25 @@
 <!doctype html>
 <html>
     <head>
-        <meta charset=utf-8>
-        <meta name=description content="">
-        <meta name=viewport content="width=device-width, initial-scale=1">
-        <title>Untitled</title>
-        <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
-  			<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
-			  <!--[if IE]>
-			      <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
-			  <![endif]-->
+      <meta charset=utf-8>
+      <meta name=description content="">
+      <meta name=viewport content="width=device-width, initial-scale=1">
+      <title>Untitled</title>
+      <link href="stylesheets/screen.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  		<link href="stylesheets/print.css" media="print" rel="stylesheet" type="text/css" />
+  	  <!--[if IE]>
+  	      <link href="/stylesheets/ie.css" media="screen, projection" rel="stylesheet" type="text/css" />
+  	  <![endif]-->
     </head>
     <body>
 
-			<h1>bingo</h1>
-		
-    
-
-
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.2/underscore-min.js"></script>
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.2/backbone-min.js"></script> 
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script src="js/main.js"></script>
+      <div class="container">
+        <h1>hi</h1>
+      </div>
+      <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+      <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.4.2/underscore-min.js"></script>
+      <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/0.9.10/backbone-min.js"></script> 
+      <script src="js/app.js"></script>
 
     </body>
 </html>
